# ADS1256

./: README.md  __init__.py  ads1256.py  pyproject.toml
ads1256/: ads1256.py  setup.py
examples/: multichannel.py  read_voltage.py
