[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ads1256"
version = "0.2.0"
description = "A python library to communicate with the ADS1256 analog to digital converter from Texas Instruments."
authors = [
    { name="Samul Kosmann", email="samuel.kosmann@gmail.com" }
]
readme = "README.md"
dependencies = [
    "spidev>=3.6",
    "gpiod>=2.2.1"
]
urls = { Repository = "https://github.com/dantrica/ADS1256" }
